--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,3 +25,7 @@ jobs:
       - name: Run test suite
         run: |
           pipenv run pytest
+      - name: Run black formatter
+        uses: rickstaa/action-black@v1.1.14
+      - format:
+        run: pipenv run black .
