--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,11 @@ jobs:
           pipenv run pytest
       
   format:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Run black formatter
         uses: rickstaa/action-black@v1.1.14
+        with:
+          black_args: "."
       
