--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
       - name: Run black formatter
         uses: rickstaa/action-black@v1.1.14
         with:
